// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`場面ごとの操作列 開いたとき 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

====

# 開いた直後
フロントエンド 364,47,272,106,0,0,272,106
Web 12,30,120,64,0,0,120,64
App 140,30,120,64,0,0,120,64
バックエンド 412,401,576,148,0,0,576,148
API 12,30,120,64,0,0,120,64
ストレージ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
Cache 140,30,120,64,0,0,120,64
ユーザー 223.49,443,120,64,0,0,120,64

====

# 開いた直後
A 40,40,120,64,0,0,120,64
B 60,112,120,64,0,0,120,64
C 50,184,120,64,0,0,120,64
枠 400,40,272,178,0,0,272,178
位置なし1 140,30,120,64,0,0,120,64
位置なし2 12,102,120,64,0,0,120,64
位置あり 12,30,120,64,0,0,120,64
位置なしの最上位 465.03,226.03,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 設定変更（グループの中） 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"size":"L"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,334,0,0,576,334
Web 12,30,274,178,0,0,274,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,250,64,0,0,250,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,216,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,430,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,586,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"size":"S"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面あいうえお… 12,30,96,44,0,0,96,44
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"size":"M"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"shape":"db"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"shape":"person"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,70,26,0,0,70,26
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"shape":"box"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"childView":"tree"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,348,0,0,576,348
Web 12,30,288,192,84,12,120,64
トップ画面 12,116,120,64,0,0,120,64
カート画面 156,116,120,64,0,0,120,64
モバイル 292,230,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,444,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,600,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"treeDirection":"right"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,332,0,0,576,332
Web 12,30,304,176,12,56,120,64
トップ画面 172,12,120,64,0,0,120,64
カート画面 172,100,120,64,0,0,120,64
モバイル 292,214,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,428,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,584,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"childView":"hidden"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,120,64,0,0,120,64
トップ画面 172,12,120,64,0,0,120,64
カート画面 172,100,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"childView":"nest"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 6 {"overflow":"clip"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 6 {"overflow":"wrap"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"fill":false}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 {"border":false}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 設定変更（最上位） 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"childView":"tree"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 212,88,592,234,236,12,120,64
Web 12,116,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 308,116,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,330,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,486,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"childView":"nest"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"childView":"hidden"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 448,88,120,64,0,0,120,64
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"childView":"tree"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 212,88,592,234,236,12,120,64
Web 12,116,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 308,116,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,330,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,486,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"treeDirection":"left"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 280,88,456,260,324,98,120,64
Web 12,12,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 12,142,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,356,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,512,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 {"childView":"nest"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 17 {"treeDirection":"up"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,116,120,64
決済 12,12,120,64,0,0,120,64
メール配信 156,12,120,64,0,0,120,64

# 17 {"childView":"nest"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 372,468,272,106,0,0,272,106
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64

# 17 {"childView":"hidden"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 448,468,120,64,0,0,120,64
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64

# 10 {"childView":"tree"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 212,280,592,234,236,12,120,64
API 12,116,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 308,116,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 448,522,120,64,0,0,120,64
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64

# 10 {"childView":"nest"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 448,468,120,64,0,0,120,64
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64

# 2 {"caption":"とても長い名前のユーザーのボックス"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
とても長い名前のユーザーのボックス 12,120,178,64,0,0,178,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 448,468,120,64,0,0,120,64
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64

# 2 {"size":"S"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
とても長い名前のユー… 52,120,96,44,0,0,96,44
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 448,468,120,64,0,0,120,64
決済 12,30,120,64,0,0,120,64
メール配信 140,30,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 縮んだら押し下げた相手を戻す 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,236,0,0,576,236
Web 12,30,272,194,0,0,272,194
トップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,80,0,0,240,80
カート画面 140,118,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,332,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,488,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,290,0,0,576,290
Web 12,30,272,248,0,0,272,248
トップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてとトップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,134,0,0,240,134
カート画面 140,172,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,386,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,542,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 読み直し・Undo 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 外部の変更を読み直す
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,296,228,0,0,296,228
Web 12,30,144,186,0,0,144,186
トップ画面 12,30,120,64,0,0,120,64
カート画面 12,110,120,64,0,0,120,64
新しい箱 164,30,120,64,0,0,120,64
バックエンド 220,324,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 860,300,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64
新しい最上位 536,68,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,296,300,0,0,296,300
Web 12,30,264,186,0,0,264,186
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 12,110,120,64,0,0,120,64
新しい箱 164,224,120,64,0,0,120,64
バックエンド 220,396,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 860,300,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64
新しい最上位 536,68,120,64,0,0,120,64

# Undo
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,296,228,0,0,296,228
Web 12,30,144,186,0,0,144,186
トップ画面 12,30,120,64,0,0,120,64
カート画面 12,110,120,64,0,0,120,64
新しい箱 164,30,120,64,0,0,120,64
バックエンド 220,324,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 860,300,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64
新しい最上位 536,68,120,64,0,0,120,64

# Undo
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# Redo
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,296,228,0,0,296,228
Web 12,30,144,186,0,0,144,186
トップ画面 12,30,120,64,0,0,120,64
カート画面 12,110,120,64,0,0,120,64
新しい箱 164,30,120,64,0,0,120,64
バックエンド 220,324,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 860,300,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64
新しい最上位 536,68,120,64,0,0,120,64

# 開き直す
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 子のサイズをそろえる 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 {"caption":"トップ画面あいうえおかきくけこさしすせそたちつてと"}
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 の幅
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 の両方
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,262,0,0,576,262
Web 12,30,392,106,0,0,392,106
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 260,30,120,64,0,0,120,64
モバイル 292,144,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,358,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,514,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 10 の高さ
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,262,0,0,576,262
Web 12,30,392,106,0,0,392,106
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 260,30,120,64,0,0,120,64
モバイル 292,144,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,358,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,514,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# Undo
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,220,0,0,576,220
Web 12,30,272,178,0,0,272,178
トップ画面あいうえおかきくけこさしすせそたちつてと 12,30,240,64,0,0,240,64
カート画面 140,102,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,316,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,472,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64"
`;

exports[`場面ごとの操作列 はみ出しの調整（最初に開いたとき） 1`] = `
"# 開いた直後
左 40,40,120,64,0,0,120,64
右端（つながる） 40,144,120,64,0,0,120,64
右端（つながらない） 12,248,120,64,0,0,120,64
左から大きい 300,300,800,64,0,0,800,64

# ドラッグ
左 40,40,120,64,0,0,120,64
右端（つながる） 80,144,120,64,0,0,120,64
右端（つながらない） 12,248,120,64,0,0,120,64
左から大きい 300,300,800,64,0,0,800,64

# 外部の変更を読み直す（調整しない）
左 40,40,120,64,0,0,120,64
右端（つながる） 900,40,120,64,0,0,120,64
右端（つながらない） 950,200,120,64,0,0,120,64
左から大きい 300,300,800,64,0,0,800,64"
`;

exports[`場面ごとの操作列 ドラッグ中 1`] = `
"# 開いた直後
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,148,0,0,576,148
Web 12,30,272,106,0,0,272,106
トップ画面 12,30,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,280,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,468,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 5 を右下へ（Web とフロントエンドが下へ伸び、下の最上位を押す）
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,308,0,0,576,308
Web 12,30,272,266,0,0,272,266
トップ画面 132,190,120,64,0,0,120,64
カート画面 140,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,404,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,560,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 6 を左の空いた場所へ
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,308,0,0,576,308
Web 12,30,264,266,0,0,264,266
トップ画面 132,190,120,64,0,0,120,64
カート画面 12,30,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,404,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,560,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 6 を 5 に重ねる（5 と入れ替わる）
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,576,308,0,0,576,308
Web 12,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 292,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,404,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,560,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 4 を右へ（Web とモバイルが入れ替わる）
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,588,308,0,0,588,308
Web 312,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 20,30,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,404,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,560,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 7 を下へ（フロントエンドが広がり、下の最上位を押す）
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 220,88,588,448,0,0,588,448
Web 312,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 20,330,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,544,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,700,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 3 を右へ
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 400,88,588,448,0,0,588,448
Web 312,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 20,330,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,544,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,700,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# 2 を 3 に重ねる（3 は左へずれ、離すと 2 は 3 の右へ寄る）
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 868,120,120,64,0,0,120,64
フロントエンド 272,88,588,448,0,0,588,448
Web 312,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 20,330,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,544,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,700,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64

# Undo
3階層のサンプル（ワールド → グループ → グループ → ボックス） 24,16,480,64,0,0,480,64
ユーザー 40,120,120,64,0,0,120,64
フロントエンド 400,88,588,448,0,0,588,448
Web 312,30,264,266,0,0,264,266
トップ画面 132,118,120,64,0,0,120,64
カート画面 132,190,120,64,0,0,120,64
モバイル 20,330,272,106,0,0,272,106
iOS 12,30,120,64,0,0,120,64
Android 140,30,120,64,0,0,120,64
バックエンド 220,544,576,148,0,0,576,148
API 12,30,272,106,0,0,272,106
認証 12,30,120,64,0,0,120,64
注文 140,30,120,64,0,0,120,64
データ 292,30,272,106,0,0,272,106
DB 12,30,120,64,0,0,120,64
キャッシュ 140,30,120,64,0,0,120,64
外部サービス 364,700,288,192,84,12,120,64
決済 12,116,120,64,0,0,120,64
メール配信 156,116,120,64,0,0,120,64"
`;
